<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/txvCodigoPublicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        android:layout_margin="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <EditText
        android:id="@+id/edtCodigoPublicacion"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/edtcodigo"
        android:minHeight="48dp"
        android:inputType="text"
        android:autofillHints="name"

        app:layout_constraintTop_toBottomOf="@id/txvCodigoPublicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="488dp"/>

    <TextView
        android:id="@+id/txvTituloLibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_titulo_libro"
        android:layout_margin="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCodigoPublicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/edtTituloLibro"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/libro"
        android:minHeight="48dp"
        android:inputType="text"
        android:autofillHints="familyName"
        app:layout_constraintTop_toBottomOf="@id/txvTituloLibro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="488dp" />

    <TextView
        android:id="@+id/txvAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anio"
        android:layout_margin="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTituloLibro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.10"/>

    <EditText
        android:id="@+id/edtAnio"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/edt_anio_libro"
        android:minHeight="48dp"
        android:inputType="number"
        android:autofillHints="age"

        app:layout_constraintTop_toBottomOf="@id/txvAnio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="488dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/guardar"
        android:textSize="15sp"
        android:textAppearance="@style/Widget.Material3.Button"

        app:layout_constraintTop_toBottomOf="@id/edtAnio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>